# learnopengl_hello_triangle

./: CMakeLists.txt  README.md  inputfile.json  main.cpp  shader.cpp  shader.h  shader.vs  texture.cpp
Headers/: Mesh.h  Model.h  Sphere.h  shader.h  stb_image.h
Models/: planet.json
Shaders/: flat.fs  flat.vs
Source/: Mesh.cpp  Model.cpp  Sphere.cpp  camera.cpp  camera.h  glad.c  main.cpp  shader.cpp
hello_triangle/Headers/: texture.h
hello_triangle/Source/: main.cpp  texture.cpp
